# missbot

./: .dockerignore  .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.py
missbot/: __init__.py  __main__.py  configutil.py  contexts.py  registry.py  types.py
missbot/auth/: __init__.py  slack.py  util.py
missbot/contrib/: stocks.py
missbot/slack/: __init__.py  middleware.py  routes.py
requirements/: base.txt  test.txt
test/: conftest.py  test_server.py
