[build-system]
requires = [ "setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
(
    /(
          \.eggs
        | \.git
        | \.tox
        | \.venv
        | build
        | dist
    )/
)
'''

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,black
skipsdist = true
skip_missing_interpreters = true
isolated_build = true

[testenv]
deps = -r requirements/test.txt
commands = python -m pytest test/
passenv =
    REDIS_URL
    SLACK_CLIENT_ID
    SLACK_CLIENT_SECRET
    SLACK_SIGNING_SECRET

[testenv:black]
deps = black
commands = black --check .
"""
